--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
         "animate.css": "latest",
         "angular": "latest",
         "angular-route": "latest",
-        "angular-filter": "latest"
+        "angular-filter": "latest",
+        "ngBootbox":"latest"
     }
 }
